{
  "@@locale": "en",
  "language_name": "English",
  "title": "RepositoryViewer",
  "list": "List",
  "detail": "Detail",
  "search": "Search",
  "settings": "Settings",
  "language": "Language",
  "language_setting": "Set Language",
  "best_match": "Best Match",
  "last_updated": "Last Updated",
  "unset": "Unset ",
  "stars": "Stars",
  "wathcers": "Watchers",
  "forks": "Forks",
  "issues": "Issues",
  "error": "Error",
  "http_error": "An unexpected error has occurred. Please try again.",
  "invalid_query": "The search query you entered is invalid. Please check it again.",
  "empty_list": "Enter a keyword to search for repositories."
}
