{
  "@@locale": "ja",
  "language_name": "日本語",
  "title": "RepositoryViewer",
  "list": "リスト",
  "detail": "詳細",
  "search": "検索",
  "settings": "設定",
  "language": "言語",
  "language_setting": "言語設定",
  "unset": "未設定 ",
  "best_match": "おすすめ",
  "last_updated": "最新の更新",
  "stars": "Stars",
  "wathcers": "Watchers",
  "forks": "Forks",
  "issues": "Issues",
  "error": "エラー",
  "http_error": "予期しないエラーが発生しました。もう一度お試しください。",
  "invalid_query": "入力された検索条件が無効です。再度確認してください。",
  "empty_list":"キーワードを入力してレポジトリを探しましょう。"
}
